Fixed margin of images, adjusted display on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,11 +98,7 @@ p {
   color: white;
 }
 
-@media (max-width: 600px) {
-  .index-page-images {
-    display: none;
-  }
-
+@media (max-width: 500px) {
   h1 {
     font-size: 48px;
   }
